[gd_scene load_steps=3 format=3 uid="uid://c52clu0v4pnx2"]

[ext_resource type="Script" uid="uid://ckr6pn3p7pywd" path="res://scenes/game/journal_page.gd" id="1_8vtsq"]
[ext_resource type="Theme" uid="uid://b0g7ak0qqm4el" path="res://assets/ui_themes/rich_text_label_theme.tres" id="2_0m82y"]

[node name="JournalPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -952.0
offset_bottom = -394.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8vtsq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DayCounter" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Day x"
horizontal_alignment = 1

[node name="EntryText" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_0m82y")
bbcode_enabled = true
text = "Page Text for Testing
[center]line 1
line 2[/center]
"
scroll_following = true
shortcut_keys_enabled = false
justification_flags = 0
drag_and_drop_selection_enabled = false

[node name="PageNumber" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "0"
